# drake

.binder/: Dockerfile
bindings/pydrake/examples/: BUILD.bazel  examples_py.cc  examples_py.h  examples_py_manipulation_station.cc  examples_py_rl_cito_station.cc  rl_cito_station.py
drake_gym/: .wandb_api_key  BUILD.bazel  Readme.md  drake_gym.py  rl_play_boxflipup.py  rl_play_humanoid_fbase_standup_pid.py  rl_play_iiwa_pushing_box.py  rl_play_manipulation_station_pushing_box.py  rl_play_noodleman_fbase_standup_pid.py  rl_play_noodleman_fbase_standup_torque.py  rl_play_noodlemanstandup_idc.py  rl_play_noodlemanstandup_pid.py  rl_play_punyoid_lifting_box.py  rl_train_boxflipup.py  rl_train_humanoid_fbase_standup_pid.py  rl_train_iiwa_pushing_box.py  rl_train_manipulation_station_pushing_box.py  rl_train_noodleman_fbase_standup_pid.py  rl_train_noodleman_fbase_standup_torque.py  rl_train_noodlemanstandup_idc.py  rl_train_noodlemanstandup_pid.py  rl_train_punyoid_lifting_box.py  rl_wandb_train_manipulation_station_pushing_box.py  rllib_play_manipulation_station_pushing_box.py  rllib_train_manipulation_station_pushing_box.py  scenarios.py  test_capsule.py  test_gym.py  test_training.py  utils.py
drake_gym/envs/: BUILD.bazel  box_flipup.py  humanoid_fbase_standup_pid.py  iiwa_pushing_box.py  manipulation_station_pushing_box.py  noodleman_fbase_standup_pid.py  noodleman_fbase_standup_torque.py  noodleman_standup_idc.py  noodleman_standup_pid.py  pendulum.py  punyoid_lifting_box.py
drake_gym/models/: box.sdf  box_v2.sdf  capsule.sdf  cross.sdf  floor.sdf  humanoid_torso_v2_noball_noZeroBodies_spring_prismatic.sdf  humanoid_torso_v2_noball_noZeroBodies_spring_prismatic_v2.sdf  humanoid_v2_noball.sdf  noodleman_v1.sdf  noodleman_w_foot_v1.sdf  optitrack_brick.sdf
examples/: BUILD.bazel
examples/acrobot/: BUILD.bazel  run_scvx.py
examples/kuka_iiwa_arm/: BUILD.bazel  run_lqr.cc
examples/manipulation_station/: BUILD.bazel  cito_execution.py  joint_teleop.py  joint_teleop_citorl.py  manipulation_station.cc  manipulation_station.h  manipulation_station_hardware_interface.cc  manipulation_station_hardware_interface.h  mock_station_simulation.cc  send_joint_pose.py  trajectory_execution.py  trajectory_planner.py
examples/manipulation_station/models/: custom_box.sdf  floor.sdf  table.sdf
examples/rl_cito_station/: BUILD.bazel  README.md  box_tracking.py  end_effector_teleop_sliders.py  joint_teleop.py  joint_teleop_cito_rl.py  mock_station_simulation.cc  print_station_context.py  proof_of_life.cc  rl_cito_station.cc  rl_cito_station.h  rl_cito_station_hardware_interface.cc  rl_cito_station_hardware_interface.h  trajectory_execution.py  trajectory_planner.py
examples/rl_cito_station/models/: cardboard_box.sdf  floor.sdf  iiwa14_point_end_effector.sdf
examples/rl_cito_station/test/: manipulation_station_hardware_interface_test.cc  manipulation_station_test.cc  rl_cito_station_hardware_interface_test.cc  rl_cito_station_test.cc
examples/ruxid/iiwa_idc/: BUILD.bazel  iiwa_idc_box.py
examples/ruxid/iiwa_idc/models/: floor.sdf
examples/ruxid/manipulation_station_sim/: BUILD.bazel  manipulation_station_box.py
examples/ruxid/python_humanoid_pid/: BUILD.bazel  humanoid_sim_demo_pid.py
examples/ruxid/python_humanoid_pid/models/: humanoid_v2_noball_noZeroBodies.sdf
examples/ruxid/python_humanoid_sim/: BUILD.bazel  humanoid_sim_demo_inv_dynamics_control.py
examples/ruxid/python_humanoid_sim/models/: chair_v1.sdf  floor.sdf  humanoid_v1.sdf  humanoid_v1_copy.sdf  humanoid_v1_noball.sdf
examples/ruxid/python_humanoid_torso_idc/: BUILD.bazel  humanoid_torso_idc.py  utils.py
examples/ruxid/python_humanoid_torso_idc/models/: humanoid_torso_v2_noball_noZeroBodies_spring.sdf  humanoid_torso_v2_noball_noZeroBodies_spring_inertia.sdf  humanoid_torso_v2_noball_noZeroBodies_spring_prismatic.sdf
examples/ruxid/python_humanoid_torso_idc_box/: BUILD.bazel  humanoid_torso_idc_box.py
examples/ruxid/python_humanoid_torso_idc_box/models/: box.sdf  humanoid_torso_v2_noball_noZeroBodies_spring_prismatic.sdf  humanoid_v2_noball_noZeroBodies_spring.sdf
examples/ruxid/python_humanoid_torso_idc_box_lcm/: BUILD.bazel  humanoid_torso_idc_box_lcm.py  mediapipe_test.py  mediapipe_test2.py  mediapipe_test_stereo.py  mediapipe_test_video.py  openpose_test.py  utils.py
examples/ruxid/python_humanoid_torso_idc_box_lcm/calibration/: BUILD.bazel  calib.py  calibration_settings.yaml
examples/ruxid/python_humanoid_torso_idc_box_lcm/models/: box.sdf  floor.sdf
examples/ruxid/python_noodleman_chair/: BUILD.bazel  noodleman_sim_demo.py
examples/ruxid/python_noodleman_chair/models/: chair_v1.sdf  noodleman.sdf
examples/ruxid/python_noodleman_chair_inv_dynamics_control/: BUILD.bazel  README.md  noodleman_sim_demo_inv_dynamics_control.py
examples/ruxid/python_noodleman_chair_inv_dynamics_control/models/: chair_v1.sdf  noodleman_v1.sdf
examples/ruxid/python_noodleman_chair_value_iteration/: BUILD.bazel  noodleman_sim_demo_value_iteration.py
examples/ruxid/python_noodleman_chair_value_iteration/models/: floor.sdf  noodleman.sdf  noodleman_v0.sdf
geometry/: meshcat.cc  meshcat_types.h
manipulation/kuka_iiwa/: iiwa_status_receiver.cc  iiwa_status_receiver.h
manipulation/kuka_iiwa/test/: iiwa_status_receiver_test.cc
planning/: predictive_sampling.py
systems/trajectory_optimization/: BUILD.bazel  direct_collocation_benchmark.cc
tools/install/libdrake/: build_components.bzl  build_components_refresh.py
tools/workspace/meshcat/: repository.bzl
traj_opt/examples/: 2dof_arm.urdf  2dof_ball.cc  2dof_ball.yaml  BUILD.bazel
